--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,16 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: mydb
+  database: fagin
   pool: 5
-  username: myuser
-  password: mypass
+  username:
+  password:
 
 test:
   adapter: postgresql
   encoding: unicode
-  database: mytestdb
+  database: fagin
   pool: 5
-  username: myuser
-  password: mypass
+  username:
+  password:
+
