Screwed up gitignore. Fixing

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,16 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: fagin
+  database: mydevdb
   pool: 5
-  username:
-  password:
+  username: myuser
+  password: mypass
 
 test:
   adapter: postgresql
   encoding: unicode
-  database: fagin
+  database: mytestdb
   pool: 5
-  username:
-  password:
+  username: myuser
+  password: mypass
 
